--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -12,8 +12,27 @@
 <header th:insert="parts/teacher_header :: teacher_header" th:if="${role} == 'teacher'"></header>
 <header th:insert="parts/student_header :: student_header" th:if="${role} == 'student'"></header>
 
-
 <h1>О нас</h1>
+
+<div th:if="${role} == 'system_admin'">
+    Вы можете создавать учебные группы (до 30 учеников и до 10 учителей), заполняйте поля последовательно.
+    Для изменения роли пользователя нажмите кнопку "Изменить" и укажите нужную роль.
+</div>
+
+<div th:if="${role} == 'teacher_admin'">
+    Вы можете смотреть все группы, смотреть успеваемость студентов.
+</div>
+
+<div th:if="${role} == 'teacher'">
+    Вы можете разбивать учебный план на модули, в модулях создавать тесты двых видом: тест, единый для всех учеников,
+    например, для домашней работы и билеты (тесты с разными вариантами).
+
+    Для создания теста заполните форму. Название тестов в модуле повторяться не может.
+</div>
+
+<div th:if="${role} == 'student'">
+    Вы можете проходить тесты и смотреть свою успеваемость.
+</div>
 
 </body>
 </html>
