--- a/src/main/resources/templates/parts/student_header.html
+++ b/src/main/resources/templates/parts/student_header.html
@@ -1,6 +1,6 @@
 <div th:fragment="student_header">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Education system</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal">Тестирующая система</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/student">Мои группы</a>
             <a class="p-2 text-dark" th:href="@{/educated/module/{id}(id=${module.getId()})}" th:if="${module} != null">[[${module.getTitle()}]]</a>
