--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -22,7 +22,7 @@
                 <label>Название: <input type="text" class="form-control" name="title" placeholder="Название учебного модуля: " /></label>
             </div>
             <div class="form-group">
-                <button type="submit">Сохранить</button>
+                <button class="btn btn-primary" type="submit">Сохранить</button>
             </div>
         </form>
     </div>
