--- a/src/main/resources/templates/parts/teacher_admin_header.html
+++ b/src/main/resources/templates/parts/teacher_admin_header.html
@@ -3,6 +3,8 @@
         <h5 class="my-0 mr-md-auto font-weight-normal">Тестирующая система</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/teacher-admin/all-groups">Список всех групп</a>
+            <a class="p-2 text-dark" href="/interaction">Письмо администратору</a>
+            <a class="p-2 text-dark" href="/general/edit">Редактировать профиль</a>
         </nav>
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Выйти"/>
