--- a/src/main/resources/templates/parts/student_header.html
+++ b/src/main/resources/templates/parts/student_header.html
@@ -4,6 +4,8 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/student">Мои группы</a>
             <a class="p-2 text-dark" th:href="@{/educated/module/{id}(id=${module.getId()})}" th:if="${module} != null">[[${module.getTitle()}]]</a>
+            <a class="p-2 text-dark" href="/interaction">Письмо администратору</a>
+            <a class="p-2 text-dark" href="/general/edit">Редактировать профиль</a>
         </nav>
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Выйти"/>
