--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -4,16 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
 
 <h4>Регистрация</h4>
-<p>[[${message}]]</p>
+<p class="text-danger">[[${message}]]</p>
 <form th:action="@{/registr-form}" method="post">
     <div class="form-group">
         <div><label> Имя: <input type="text" name="fullName" class="form-control" required/> </label></div>
         <div><label> Почта: <input type="email" name="username" class="form-control" required/> </label></div>
         <div><label> Пароль: <input type="password" name="password" class="form-control" required/> </label></div>
+    </div>
+    <div>
+        <p class="text-danger">[[${captchaError}]]</p>
+        <div class="g-recaptcha" data-sitekey="6LdXX3QaAAAAAHYzMaZ1cGITlWp2GHlJL3ljjIhp"></div>
     </div>
     <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
 </form>
