--- a/src/main/resources/templates/edit_role.html
+++ b/src/main/resources/templates/edit_role.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-
+<script>
+    function send(t) {
+        if (confirm("Вы уверены, что хотите удалить пользователя?"))
+            t.submit();
+    }
+</script>
 <header th:insert="parts/system_admin_header :: system_admin_header"></header>
 
 <h4>Изменить данные пользователя [[${user.getFullName()}]]</h4>
@@ -19,6 +24,13 @@
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Сохранить</button>
+</form>
+
+<form th:action="@{/system-admin/del/{id}(id=${user.getId()})}" method="post" onsubmit="send(this);return false;">
+    <div class="form-group">
+        <label><input type="checkbox" name="del"/> Удалить пользователя</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Удалить</button>
 </form>
 
 </body>
