--- a/src/main/resources/templates/list_of_users.html
+++ b/src/main/resources/templates/list_of_users.html
@@ -13,7 +13,7 @@
 
 <h4>Список пользователей</h4>
 
-<form th:action="@{/system-admin/all-users}" method="get" th:if="${admin}">
+<form th:action="@{/teacher-admin/all-users}" method="get" th:if="${admin}">
     <div><label> Почта: <input type="email" name="username" class="form-control"/> </label></div>
     <label> Имя: <input type="text" name="fullName" class="form-control"/> </label>
     <button type="submit" class="btn btn-primary">Найти</button>
@@ -25,7 +25,19 @@
         <th scope="col">Почта</th>
         <th scope="col">Роль</th>
     </tr>
-    <tr th:each="user : ${usersList}">
+    <div th:if="!${one}">
+        <tr th:each="user, iStat : ${usersList.content}">
+            <td th:text="${user.getFullName()}" ></td>
+            <td th:text="${user.getUsername()}"></td>
+            <td th:text="${user.getStringRoles()}" th:if="${admin}"></td>
+            <div th:if="${!admin}">
+                <td th:text="Студент" th:if="${!user.isTeacher()}"></td>
+                <td th:text="Учитель" th:if="${user.isTeacher()}"></td>
+            </div>
+            <td><div><a th:href="@{/system-admin/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
+        </tr>
+    </div>
+    <tr th:each="user, iStat : ${usersList}" th:if="${one}">
         <td th:text="${user.getFullName()}" ></td>
         <td th:text="${user.getUsername()}"></td>
         <td th:text="${user.getStringRoles()}" th:if="${admin}"></td>
@@ -36,6 +48,48 @@
         <td><div><a th:href="@{/system-admin/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
     </tr>
 </table>
+
+
+<div class="mt-3" th:if="!${one}">
+    <ul class="pagination">
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Страницы</a>
+        </li>
+        <div th:each="p : ${arr}">
+            <div th:if="${p - 1} == ${usersList.getNumber()}">
+                <li class="page-item">
+                    <a class="page-link" href="#" tabindex="-1">[[${p}]]</a>
+                </li>
+            </div>
+
+            <div th:if="${p - 1} != ${usersList.getNumber()}">
+                <li class="page-item">
+                    <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1}, size=${usersList.getSize()})}" tabindex="-1">[[${p}]]</a>
+                </li>
+            </div>
+        </div>
+
+    </ul>
+</div>
+
+<!--<ul class="pagination" th:if="!${one}">
+    <li class="page-item disabled">
+        <a class="page-link" href="#" tabindex="-1">Элементов на странице</a>
+    </li>
+
+    <div th:each="i: ${#numbers.sequence(20, 60, 20)}">
+        <div th:if="i == ${usersList.getSize()}">
+            <li class="page-item active">
+                <a class="page-link" href="#" tabindex="-1">[[${i}]]</a>
+            </li>
+        </div>
+        <div th:if="i != ${usersList.getSize()}">
+            <li class="page-item">
+                <a class="page-link" th:href="@{/teacher-admin/all-users(page=${usersList.getNumber()}, size=${i})}" tabindex="-1">[[${i}]]</a>
+            </li>
+        </div>
+    </div>
+</ul>-->
 
 </body>
 </html>
