--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -9,7 +9,7 @@
 <body>
 
 <h4>Регистрация</h4>
-<p class="text-danger">[[${message}]]</p>
+<p th:class="${color}">[[${message}]]</p>
 <form th:action="@{/registr-form}" method="post">
     <div class="form-group">
         <div><label> Имя: <input type="text" name="fullName" class="form-control" required/> </label></div>
@@ -22,8 +22,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
 </form>
-
-<a href="/login" class="stretched-link">Войти</a>
 
 </body>
 </html>
