--- a/src/main/resources/templates/parts/teacher_header.html
+++ b/src/main/resources/templates/parts/teacher_header.html
@@ -6,6 +6,7 @@
             <a class="p-2 text-dark" th:href="@{/educated/course/{id}/all-participants(id=${group.getId()})}" th:if="${group} != null">Список участников</a>
             <a class="p-2 text-dark" th:href="@{/educated/module/{id}(id=${module.getId()})}" th:if="${module} != null">[[${module.getTitle()}]]</a>
             <a class="p-2 text-dark" th:href="@{/educated/module/{id}/add-test(id=${module.getId()})}" th:if="${module} != null">Добавить тест</a>
+            <a class="p-2 text-dark" th:href="@{/educated/module/{id}/add-ticket(id=${module.getId()})}" th:if="${module} != null">Добавить билет</a>
             <a class="p-2 text-dark" href="/interaction">Письмо администратору</a>
             <a class="p-2 text-dark" href="/general/edit">Редактировать профиль</a>
         </nav>
