--- a/src/main/resources/templates/list_of_users.html
+++ b/src/main/resources/templates/list_of_users.html
@@ -57,14 +57,14 @@
         </li>
         <div th:each="p : ${arr}">
             <div th:if="${p - 1} == ${usersList.getNumber()}">
-                <li class="page-item">
+                <li class="page-item active">
                     <a class="page-link" href="#" tabindex="-1">[[${p}]]</a>
                 </li>
             </div>
 
             <div th:if="${p - 1} != ${usersList.getNumber()}">
                 <li class="page-item">
-                    <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1}, size=${usersList.getSize()})}" tabindex="-1">[[${p}]]</a>
+                    <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1}})}" tabindex="-1">[[${p}]]</a>
                 </li>
             </div>
         </div>
