--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -9,6 +9,7 @@
 
 <header th:insert="parts/teacher_header :: teacher_header"></header>
 
+<div class="p-3 mb-2 bg-light text-dark">
 <h4>Статистические данные</h4>
 <h6>Лучшая оценка - [[${max}]]</h6>
 <h6>Худшая оценка - [[${min}]]</h6>
@@ -28,5 +29,20 @@
     </tr>
 </table>
 
+<div th:if="${test.getSections()} != 0">
+    <div th:each="q, in : ${questions}">
+        <h5 th:if="${in.index} % ${div1} == 0"><b>Раздел</b></h5>
+        <h5>Вопрос №[[${in.index + 1}]]:</h5><h5 class="text-secondary">[[${q.getQuestion()}]]</h5>
+        <h5>Ответ:</h5><h5 class="text-success"> [[${correct.get(in.index)}]]</h5>
+    </div>
+</div>
+<div th:if="${test.getSections()} == 0">
+    <div th:each="q, in : ${questions}">
+        <h5>Вопрос №[[${in.index + 1}]]:</h5><h5 class="text-secondary">[[${q.getQuestion()}]]</h5>
+        <h5>Ответ:</h5><h5 class="text-success"> [[${correct.get(in.index)}]]</h5>
+    </div>
+</div>
+
+</div>
 </body>
 </html>
