--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -15,7 +15,7 @@
 <h4>Изменить данные</h4>
 <p>[[${message}]]</p>
 
-<form th:action="@{/system-admin/edit/{id}(id=${user.getId()})}" method="post">
+<form th:action="@{/system-user/edit/{id}(id=${user.getId()})}" method="post">
     <div class="form-group">
         <div><label> Новое имя: <input th:value="${user.getFullName()}" type="text" name="fullName" class="form-control" required/> </label></div>
         <div><label> Новая почта: <input th:value="${user.getUsername()}" type="email" name="username" class="form-control" required/> </label></div>
