--- a/src/main/resources/templates/interaction_admin.html
+++ b/src/main/resources/templates/interaction_admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>List of users</title>
+    <title>List of user</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -17,7 +17,7 @@
         [[${message.getText()}]]
     </textarea></p>
 </div>
-<form th:action="@{/system-admin/questions/{id}(id=${message.getId()})}" method="post">
+<form th:action="@{/system-user/questions/{id}(id=${message.getId()})}" method="post">
     <div class="form-group">
         <p>Ответ на вопрос (не больше 500 символов):</p>
         <p><textarea th:name="answer" rows="12" cols="45" name="text" maxlength="500" placeholder="Введите вопрос:" required></textarea></p>
