--- a/src/main/resources/templates/list_of_users.html
+++ b/src/main/resources/templates/list_of_users.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>List of users</title>
+    <title>List of user</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 
-<header th:insert="parts/system_admin_header :: system_admin_header" th:if="${admin}"></header>
-<header th:insert="parts/teacher_header :: teacher_header" th:if="${admin} == null"></header>
+<header th:insert="parts/system_admin_header :: system_admin_header" th:if="${user}"></header>
+<header th:insert="parts/teacher_header :: teacher_header" th:if="${user} == null"></header>
 
 <h4>Список пользователей</h4>
 
-<form th:action="@{/teacher-admin/all-users}" method="get" th:if="${admin}">
+<form th:action="@{/teacher-user/all-user}" method="get" th:if="${user}">
     <div><label> Почта: <input type="email" name="username" class="form-control"/> </label></div>
     <label> Имя: <input type="text" name="fullName" class="form-control"/> </label>
     <button type="submit" class="btn btn-primary">Найти</button>
@@ -29,23 +29,23 @@
         <tr th:each="user, iStat : ${usersList.content}">
             <td th:text="${user.getFullName()}" ></td>
             <td th:text="${user.getUsername()}"></td>
-            <td th:text="${user.getStringRoles()}" th:if="${admin}"></td>
-            <div th:if="${!admin}">
+            <td th:text="${user.getStringRoles()}" th:if="${user}"></td>
+            <div th:if="${!user}">
                 <td th:text="Студент" th:if="${!user.isTeacher()}"></td>
                 <td th:text="Учитель" th:if="${user.isTeacher()}"></td>
             </div>
-            <td><div><a th:href="@{/system-admin/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
+            <td><div><a th:href="@{/system-user/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
         </tr>
     </div>
     <tr th:each="user, iStat : ${usersList}" th:if="${one}">
         <td th:text="${user.getFullName()}" ></td>
         <td th:text="${user.getUsername()}"></td>
-        <td th:text="${user.getStringRoles()}" th:if="${admin}"></td>
-        <div th:if="${!admin}">
+        <td th:text="${user.getStringRoles()}" th:if="${user}"></td>
+        <div th:if="${!user}">
             <td th:text="Студент" th:if="${!user.isTeacher()}"></td>
             <td th:text="Учитель" th:if="${user.isTeacher()}"></td>
         </div>
-        <td><div><a th:href="@{/system-admin/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
+        <td><div><a th:href="@{/system-user/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
     </tr>
 </table>
 
@@ -58,17 +58,17 @@
         <div th:each="p : ${arr}">
 <!--            <div th:if="${p - 1} == ${usersList.getNumber()}">
                 <li class="page-item">
-                    <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1})}" tabindex="-1">[[${p}]]</a>
+                    <a class="page-link" th:href="@{/teacher-user/all-user(page=${p-1})}" tabindex="-1">[[${p}]]</a>
                 </li>
             </div>
 
             <div th:if="${p - 1} != ${usersList.getNumber()}">
                 <li class="page-item">
-                    <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1})}" tabindex="-1">[[${p}]]</a>
+                    <a class="page-link" th:href="@{/teacher-user/all-user(page=${p-1})}" tabindex="-1">[[${p}]]</a>
                 </li>
             </div>-->
             <li class="page-item">
-                <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1})}" tabindex="-1">[[${p}]]</a>
+                <a class="page-link" th:href="@{/teacher-user/all-user(page=${p-1})}" tabindex="-1">[[${p}]]</a>
             </li>
         </div>
 
@@ -88,7 +88,7 @@
         </div>
         <div th:if="i != ${usersList.getSize()}">
             <li class="page-item">
-                <a class="page-link" th:href="@{/teacher-admin/all-users(page=${usersList.getNumber()}, size=${i})}" tabindex="-1">[[${i}]]</a>
+                <a class="page-link" th:href="@{/teacher-user/all-user(page=${usersList.getNumber()}, size=${i})}" tabindex="-1">[[${i}]]</a>
             </li>
         </div>
     </div>
