--- a/src/main/resources/templates/parts/teacher_admin_header.html
+++ b/src/main/resources/templates/parts/teacher_admin_header.html
@@ -2,8 +2,9 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h5 class="my-0 mr-md-auto font-weight-normal">Тестирующая система</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="/teacher-admin/all-groups">Список всех групп</a>
+            <a class="p-2 text-dark" href="/teacher-user/all-groups">Список всех групп</a>
             <a class="p-2 text-dark" href="/educated">Мои группы</a>
+            <a class="p-2 text-dark" href="/teacher-admin/all-user">Мои группы</a>
             <a class="p-2 text-dark" href="/interaction">Письмо администратору</a>
             <a class="p-2 text-dark" href="/general/edit">Редактировать профиль</a>
         </nav>
