--- a/src/main/resources/templates/list_of_users.html
+++ b/src/main/resources/templates/list_of_users.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 
-<header th:insert="parts/system_admin_header :: system_admin_header" th:if="${user}"></header>
-<header th:insert="parts/teacher_header :: teacher_header" th:if="${user} == null"></header>
+<header th:insert="parts/teacher_header :: teacher_header" th:if="${admin} == null"></header>
+<header th:insert="parts/teacher_admin_header :: teacher_admin_header" th:if="${admin}"></header>
+<header th:insert="parts/system_admin_header :: system_admin_header" th:if="${sys_admin}"></header>
 
 <h4>Список пользователей</h4>
 
-<form th:action="@{/teacher-user/all-user}" method="get" th:if="${user}">
+<form th:action="@{/teacher-admin/all-users}" method="get" th:if="${admin}">
     <div><label> Почта: <input type="email" name="username" class="form-control"/> </label></div>
     <label> Имя: <input type="text" name="fullName" class="form-control"/> </label>
     <button type="submit" class="btn btn-primary">Найти</button>
@@ -29,23 +30,23 @@
         <tr th:each="user, iStat : ${usersList.content}">
             <td th:text="${user.getFullName()}" ></td>
             <td th:text="${user.getUsername()}"></td>
-            <td th:text="${user.getStringRoles()}" th:if="${user}"></td>
-            <div th:if="${!user}">
+            <td th:text="${user.getStringRoles()}" th:if="${admin}"></td>
+<!--            <div th:if="${!user}">
                 <td th:text="Студент" th:if="${!user.isTeacher()}"></td>
                 <td th:text="Учитель" th:if="${user.isTeacher()}"></td>
-            </div>
-            <td><div><a th:href="@{/system-user/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
+            </div>-->
+            <td><div><a th:href="@{/system-admin/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
         </tr>
     </div>
     <tr th:each="user, iStat : ${usersList}" th:if="${one}">
         <td th:text="${user.getFullName()}" ></td>
         <td th:text="${user.getUsername()}"></td>
-        <td th:text="${user.getStringRoles()}" th:if="${user}"></td>
-        <div th:if="${!user}">
+        <td th:text="${user.getStringRoles()}" th:if="${admin}"></td>
+        <div th:if="${!admin}">
             <td th:text="Студент" th:if="${!user.isTeacher()}"></td>
             <td th:text="Учитель" th:if="${user.isTeacher()}"></td>
         </div>
-        <td><div><a th:href="@{/system-user/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
+        <td><div><a th:href="@{/system-admin/edit/{id}(id=${user.getId()})}" class="btn btn-primary" th:if="${sys_admin}">Изменить</a></div></td>
     </tr>
 </table>
 
@@ -68,7 +69,7 @@
                 </li>
             </div>-->
             <li class="page-item">
-                <a class="page-link" th:href="@{/teacher-user/all-user(page=${p-1})}" tabindex="-1">[[${p}]]</a>
+                <a class="page-link" th:href="@{/teacher-admin/all-users(page=${p-1})}" tabindex="-1">[[${p}]]</a>
             </li>
         </div>
 
