--- a/src/main/resources/templates/parts/system_admin_header.html
+++ b/src/main/resources/templates/parts/system_admin_header.html
@@ -2,11 +2,11 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h5 class="my-0 mr-md-auto font-weight-normal">Тестирующая система</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="/teacher-user/all-user">Список пользователей</a>
-            <a class="p-2 text-dark" href="/system-user/add-group">Добавить группу</a>
-            <a class="p-2 text-dark" href="/system-user/questions">Список вопросов</a>
+            <a class="p-2 text-dark" href="/teacher-admin/all-users">Список пользователей</a>
+            <a class="p-2 text-dark" href="/system-admin/add-group">Добавить группу</a>
+            <a class="p-2 text-dark" href="/system-admin/questions">Список вопросов</a>
             <a class="p-2 text-dark" href="/general/edit">Редактировать профиль</a>
-            <a class="p-2 text-dark" href="/teacher-user/all-groups">Редактировать группы</a>
+            <a class="p-2 text-dark" href="/teacher-admin/all-groups">Редактировать группы</a>
         </nav>
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Выйти"/>
