--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+<header th:insert="parts/teacher_admin_header :: teacher_admin_header" th:if="${role} == 'teacher_admin'"></header>
 <header th:insert="parts/teacher_header :: teacher_header" th:if="${role} == 'teacher'"></header>
 <header th:insert="parts/student_header :: student_header" th:if="${role} == 'student'"></header>
 
