--- a/src/main/resources/templates/all_groups.html
+++ b/src/main/resources/templates/all_groups.html
@@ -25,5 +25,20 @@
     </div>
 </div>
 
+<div class="mt-3" th:if="!${one}">
+    <ul class="pagination">
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Страницы</a>
+        </li>
+        <div th:each="p : ${arr}">
+            <li class="page-item">
+                <a class="page-link" th:href="@{/teacher-admin/all-groups(page=${p-1})}" tabindex="-1">[[${p}]]</a>
+            </li>
+        </div>
+
+    </ul>
+</div>
+
+
 </body>
 </html>
