Фиксирование ошибок, комментирование кода

--- a/src/main/resources/templates/create_ticket.html
+++ b/src/main/resources/templates/create_ticket.html
@@ -9,7 +9,7 @@
 
 <header th:insert="parts/teacher_header :: teacher_header"></header>
 
-<h4>Создать тест</h4>
+<h4>Создать билет</h4>
 <p>[[${message}]]</p>
 
 <form method="get" th:action="@{/educated/module/{id}/add-ticket(id=${module.getId()})}">
