Добавление статистики Добавление ф-ии "прикрипления файла"

--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<header th:insert="parts/teacher_header :: teacher_header"></header>
+
 <p>Проверка работы [[${info}]]</p>
 <p>[[${message}]]</p>
 
