--- a/src/main/resources/templates/create_test_with_file.html
+++ b/src/main/resources/templates/create_test_with_file.html
@@ -18,14 +18,13 @@
         <label>Задание: <input type="text" name="question" placeholder="Вопрос: " class="form-control" required/></label>
         <div class="custom-file">
             <input type="hidden" name="1000000" value="1000000">
-            <input type="file" class="custom-file-input" name="file" id="customFile" accept="image/*,image/jpeg" required>
+            <input type="file" class="custom-file-input" name="file" id="customFile" accept="image/*,image/jpeg">
             <label class="custom-file-label" for="customFile">Прикрепить файл</label>
         </div>
     </div>
 
     <button class="btn btn-primary" type="submit">Создать самостоятельную работу</button>
 </form>
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
